Upgraded versions and added example for Java 21.